--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "nodemailer": "^6.9.7",
     "uuid": "^9.0.1",
     "pg": "^8.11.3",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "helmet": "^7.1.0",
+    "express-rate-limit": "^7.1.5",
+    "joi": "^17.11.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
