--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,5 @@
-# Database
-DATABASE_URL=postgresql://user:password@host:5432/database
+# Copiada automaticamente pelo Railway quando você adiciona um Postgres
+DATABASE_URL=postgresql://user:pass@host:port/dbname
 
-# JWT Secret
-JWT_SECRET=your-secret-key-change-in-production
-
-# Email (Gmail)
-EMAIL_USER=your-email@gmail.com
-EMAIL_PASS=your-app-password
-
-# Node Environment
-NODE_ENV=production
-
-# Port (Railway will set this automatically)
-PORT=3001
+# Secret para gerar/validar tokens JWT
+JWT_SECRET=seu_secret_aqui
