--- a/package.json
+++ b/package.json
@@ -1,30 +1,28 @@
 {
   "name": "financeflow-backend",
   "version": "1.0.0",
-  "description": "Backend API for FinanceFlow Multi-Currency",
-  "main": "server.js",
+  "private": true,
+  "type": "module",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "tsx watch server.ts"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "body-parser": "^1.20.2",
-    "bcryptjs": "^2.4.3",
+    "express": "^4.21.0",
+    "pg": "^8.13.0",
     "jsonwebtoken": "^9.0.2",
-    "nodemailer": "^6.9.7",
-    "uuid": "^9.0.1",
-    "pg": "^8.11.3",
-    "dotenv": "^16.3.1",
-    "helmet": "^7.1.0",
-    "express-rate-limit": "^7.1.5",
-    "joi": "^17.11.0"
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
-  },
-  "engines": {
-    "node": ">=18.0.0"
+    "@types/express": "^5.0.0",
+    "@types/pg": "^8.11.5",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
+    "@types/node": "^22.0.0",
+    "tsx": "^4.7.0",
+    "typescript": "^5.7.2"
   }
 }
